--- a/index.html
+++ b/index.html
@@ -290,6 +290,57 @@
           </section>
         </div>
 
+        <div id="user-study">
+          <h3 class="title is-3"> User study comparisons (Left: TTR & Right: ReGenNet)</h3>
+          <section class="hero">
+            <div class="hero-body">
+              <div class="container">
+                <div id="results-carousel" class="carousel results-carousel">
+
+
+                  <div class="item">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/comparisons/G021T003A019R027_comp.mkv"
+                              type="video/mp4">
+                    </video>
+                    <div>
+                      <p class="subtitle is-6 has-text-centered description">ReGenNet (right) wins due to more natural body contact.</p>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/comparisons/G037T006A033R019_comp.mkv"
+                              type="video/mp4">
+                    </video>
+                    <div>
+                      <p class="subtitle is-6 has-text-centered description">TTR (left) wins due to better semantics matchness.</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/comparisons/G050T004A024R024_comp.mkv"
+                              type="video/mp4">
+                    </video>
+                    <div>
+                      <p class="subtitle is-6 has-text-centered description">ReGenNet (right) wins due to better orientation matchness.</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
+                      <source src="./static/videos/comparisons/G057T001A006R008_comp.mkv"
+                              type="video/mp4">
+                    </video>
+                    <div>
+                      <p class="subtitle is-6 has-text-centered description">TTR (left) wins due to more natural reaction.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+
       </div>
     </div>
 
